@@ -1,3 +1,9 @@
+Thu Jun 26 17:19:03 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/Utils/DDSApp.h:
+
+          Added comments for usage of topic overloaded methods.
+
 Thu Jun 26 16:02:01 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/DCPS/WriteDataContainer.cpp:
